--- a/org.yaml
+++ b/org.yaml
@@ -12,7 +12,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: shashankdatt08
+  name: shashankh
 spec:
   profile:
     displayName: Shashank
